[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "vrc_controller"
version = "0.0.1"
authors = [
    { name = "Chitasa" },
]
description = "A wrapper for VR Chat's OSC bindings and audio support"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'event-bus',
    'numpy',
    'scipy',
    'sounddevice',
    'soundfile',
    'python-osc',
    'SpeechRecognition',
]
[project.urls]
"Homepage" = "https://github.com/Chitasa/VRC_Controller"
"Bug Tracker" = "https://github.com/Chitasa/VRC_Controller/issues"
